--- a/package.json
+++ b/package.json
@@ -7,10 +7,14 @@
   },
   "dependencies": {
     "next": "latest",
+    "next-i18next": "^13.0.2",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-hook-form": "^7.41.1",
+    "tailwindcss-animation-delay": "^1.0.7"
   },
   "devDependencies": {
+    "@tailwindcss/forms": "^0.5.3",
     "@types/node": "18.11.3",
     "@types/react": "18.0.21",
     "@types/react-dom": "18.0.6",
