--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@hookform/error-message": "^2.0.1",
     "next": "latest",
     "next-i18next": "^13.0.2",
     "react": "18.2.0",
