--- a/package.json
+++ b/package.json
@@ -7,11 +7,13 @@
   },
   "dependencies": {
     "@hookform/error-message": "^2.0.1",
+    "axios": "^1.2.2",
     "next": "latest",
     "next-i18next": "^13.0.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.41.1",
+    "react-query": "^3.39.2",
     "tailwindcss-animation-delay": "^1.0.7"
   },
   "devDependencies": {
