--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "@hookform/error-message": "^2.0.1",
+    "@reduxjs/toolkit": "^1.9.1",
     "axios": "^1.2.2",
     "next": "latest",
     "next-i18next": "^13.0.2",
@@ -14,6 +15,7 @@
     "react-dom": "18.2.0",
     "react-hook-form": "^7.41.1",
     "react-query": "^3.39.2",
+    "react-redux": "^8.0.5",
     "tailwindcss-animation-delay": "^1.0.7"
   },
   "devDependencies": {
