--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@hookform/error-message": "^2.0.1",
     "@reduxjs/toolkit": "^1.9.1",
     "axios": "^1.2.2",
+    "cookies-next": "^2.1.1",
     "next": "latest",
     "next-i18next": "^13.0.2",
     "react": "18.2.0",
