--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.41.1",
+    "react-infinite-scroll-component": "^6.1.0",
     "react-query": "^3.39.2",
     "react-redux": "^8.0.5",
     "tailwindcss-animation-delay": "^1.0.7"
