--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "next": "latest",
     "next-i18next": "^13.0.2",
     "next-images": "^1.8.4",
+    "pusher": "^5.1.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.41.1",
@@ -34,8 +35,10 @@
     "eslint": "^8.30.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.2.1",
+    "laravel-echo": "^1.15.0",
     "postcss": "^8.4.18",
     "prettier": "2.8.1",
+    "pusher-js": "^8.0.1",
     "tailwindcss": "^3.2.4",
     "typescript": "^4.9.4"
   }
