chore: add pusher variables in env.example

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,5 @@
 NEXT_PUBLIC_SERVER_API_URL = *******
 DOMAINS = *******
+
+NEXT_PUBLIC_PUSHER_APP_KEY=*******
+NEXT_PUBLIC_PUSHER_APP_CLUSTER=*******
