--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "react-infinite-scroll-component": "^6.1.0",
     "react-query": "^3.39.2",
     "react-redux": "^8.0.5",
-    "tailwindcss-animation-delay": "^1.0.7"
+    "tailwindcss-animation-delay": "^1.0.7",
+    "pusher-js": "^8.0.1"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.3",
@@ -38,7 +39,6 @@
     "laravel-echo": "^1.15.0",
     "postcss": "^8.4.18",
     "prettier": "2.8.1",
-    "pusher-js": "^8.0.1",
     "tailwindcss": "^3.2.4",
     "typescript": "^4.9.4"
   }
